# CET_project_CTI_En

./: CMakeLists.txt
WeeksDoc/: 5-week_plan_project.docx  InterfaceDesignInitial.txt
src/: USBManager.cpp  USBManager.h  main.cpp  main_gui.cpp
